<resources>
    <string name="app_name">Teletubby</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_default_username">Mama MC</string>
    <string name="setting_default_status">в сети</string>
    <string name="settings_text_account">Аккаунт</string>
    <string name="settings_default_number">+72281488322</string>
    <string name="settings_label_phone_number">Нажмите, чтобы изменить номер телефона</string>
    <string name="settings_default_login">mamon</string>
    <string name="settings_label_login">Имя пользователя</string>
    <string name="settings_default_bio">О себе</string>
    <string name="settings_label_bio">Напишите немного о себе</string>
    <string name="settings_menu_change_name">Изменить имя</string>
    <string name="settings_menu_exit">Выход</string>
    <string name="cd_register_image">cd_register_image</string>
    <string name="register_text_enter_code">Введите код</string>
    <string name="register_text_we_send">Мы отправили SMS с кодом проверки на ваш телефон</string>
    <string name="register_hint_default_code">- - - - - -</string>
    <string name="register_title_your_phone">Ваш телефон</string>
    <string name="register_toast_enter_phone">Введите номер телефона</string>
    <string name="register_phone_hint">-----------</string>
    <string name="settings_hint_input_name">Имя</string>
    <string name="settings_hint_input_surname">Фамилия</string>
    <string name="settings_name_is_empty">Имя не может быть пустым</string>
    <string name="settings_toast_name_is_empty">Имя не может быть пустым</string>
    <string name="toast_data_update">Данные обновлены</string>
    <string name="settings_hint_input_username">username</string>
    <string name="settings_hint_input_bio">bio</string>
</resources>