<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_header_block"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/settings_user_photo"
            android:layout_width="@dimen/settings_user_photo_width"
            android:layout_height="@dimen/settings_user_photo_height"
            android:src="@drawable/ic_default_photo_profile"
            android:layout_marginStart="@dimen/app_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteX="3dp"
            tools:layout_editor_absoluteY="1dp" />

        <TextView
            android:id="@+id/settings_full_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            tools:text="@string/settings_default_username"
            android:layout_marginStart="@dimen/app_margin"
            android:textSize="@dimen/normalText"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/app_small_margin"
            app:layout_constraintTop_toTopOf="@id/settings_user_photo"
            app:layout_constraintStart_toEndOf="@id/settings_user_photo"/>

        <TextView
            android:id="@+id/settings_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/whiteblur"
            tools:text="@string/setting_default_status"
            android:layout_marginStart="@dimen/app_margin"
            android:textSize="@dimen/smallText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_full_name"
            app:layout_constraintStart_toEndOf="@id/settings_user_photo"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/settings_text_account"
        android:layout_width="match_parent"
        android:text="@string/settings_text_account"
        android:layout_height="wrap_content"
        android:textColor="@color/primary"
        android:textSize="@dimen/smallText"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/app_margin"
        android:layout_marginTop="@dimen/vertical_large_margin"
        app:layout_constraintTop_toBottomOf="@+id/settings_header_block"/>

<!-- Кнопка смены номера телефона -->
    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/settings_btn_change_number_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_text_account"
        style="@style/settingsButtons">

        <TextView
            android:id="@+id/settings_phone_number"
            tools:text="@string/settings_default_number"
            app:layout_constraintTop_toTopOf="@+id/settings_btn_change_number_phone"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            style="@style/normalText" />
        <TextView
            android:id="@+id/settings_label_phone_number"
            android:text="@string/settings_label_phone_number"
            app:layout_constraintTop_toBottomOf="@+id/settings_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            style="@style/smallText" />
        <View
            app:layout_constraintTop_toBottomOf="@id/settings_label_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/separator" />


    </androidx.constraintlayout.widget.ConstraintLayout>

<!-- Кнопка смены логина -->
    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/settings_btn_change_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_btn_change_number_phone"
        style="@style/settingsButtons">

        <TextView
            android:id="@+id/settings_username"
            tools:text="@string/settings_default_login"
            app:layout_constraintTop_toTopOf="@+id/settings_btn_change_username"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints,NotSibling"
            style="@style/normalText" />
        <TextView
            android:id="@+id/settings_label_username"
            android:text="@string/settings_label_login"
            app:layout_constraintTop_toBottomOf="@+id/settings_username"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            style="@style/smallText" />
        <View
            app:layout_constraintTop_toBottomOf="@id/settings_label_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/separator" />


    </androidx.constraintlayout.widget.ConstraintLayout>

<!-- Кнопка "О себе" -->
    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/settings_btn_change_bio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_btn_change_username"
        style="@style/settingsButtons">

        <TextView
            android:id="@+id/settings_bio"
            tools:text="@string/settings_default_bio"
            app:layout_constraintTop_toTopOf="@+id/settings_btn_change_bio"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints,NotSibling"
            style="@style/normalText" />
        <TextView
            android:id="@+id/settings_label_bio"
            android:text="@string/settings_label_bio"
            app:layout_constraintTop_toBottomOf="@+id/settings_bio"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            style="@style/smallText" />
        <View
            app:layout_constraintTop_toBottomOf="@id/settings_label_bio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/separator" />


    </androidx.constraintlayout.widget.ConstraintLayout>

<!-- Кнопка смены аватарки   -->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_change_photo"
        android:layout_width="@dimen/settings_user_photo_width"
        android:layout_height="@dimen/settings_user_photo_height"
        android:src="@drawable/ic_camera"
        android:layout_marginEnd="@dimen/app_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/settings_header_block"
        app:layout_constraintTop_toBottomOf="@id/settings_header_block"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="1dp" />





</androidx.constraintlayout.widget.ConstraintLayout>